/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'java'
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

configurations {
    cxfCodegen
}

dependencies {
    implementation 'jakarta.xml.ws:jakarta.xml.ws-api:4.0.0'
    implementation 'jakarta.jws:jakarta.jws-api:3.0.0'
    implementation 'com.sun.xml.ws:jaxws-ri:4.0.2'
    implementation 'org.apache.cxf:cxf-rt-frontend-jaxws:4.1.2'
    implementation 'org.apache.cxf:cxf-rt-transports-http:4.1.2'
    implementation 'org.apache.cxf:cxf-rt-transports-local:4.1.2'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.4.4'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.4.4'
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.4.4'
    compileOnly 'org.projectlombok:lombok:1.18.28'
    annotationProcessor 'org.projectlombok:lombok:1.18.28'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.4.4'
    runtimeOnly 'org.postgresql:postgresql:42.7.7'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    cxfCodegen 'org.apache.cxf:cxf-tools-wsdlto-core:4.1.2'
    cxfCodegen 'org.apache.cxf:cxf-tools-wsdlto-frontend-jaxws:4.1.2'
    cxfCodegen 'org.apache.cxf:cxf-tools-common:4.1.2'
    cxfCodegen 'org.apache.cxf.xjc-utils:cxf-xjc-runtime:4.1.0'
    cxfCodegen 'org.apache.cxf:cxf-tools-wsdlto-databinding-jaxb:4.1.2'
}

def wsdlUrl = 'https://vatandas.jandarma.gov.tr/KBS_Tesis_Servis/SrvShsYtkTml.svc?wsdl'
def outputDir = "build/generated-sources/wsdl2java"
def packageName = 'com.tys.client'


task wsdl2java(type: JavaExec) {
    group = 'wsdl'
    description = 'Generates Java code from WSDL via Apache CXF'

    mainClass.set('org.apache.cxf.tools.wsdlto.WSDLToJava')
    classpath = configurations.cxfCodegen
    jvmArgs = ["-Dfile.encoding=UTF-8"]  // ← Bu satır önemli
    args = [
            "-d", outputDir,
            "-p", packageName,
            "-verbose",
            "-xjc-npa", // Optional: avoid generated @XmlAccessorType(NONE)
            wsdlUrl
    ]
}

sourceSets.main.java.srcDir outputDir
compileJava.dependsOn wsdl2java

group = 'com'
version = '0.0.1-SNAPSHOT'
description = 'tys'
java.sourceCompatibility = JavaVersion.VERSION_17

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}
